--- a/notebooks/error_handling.ipynb
+++ b/notebooks/error_handling.ipynb
@@ -106,7 +106,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def"
+   ]
   },
   {
    "cell_type": "markdown",
